[gd_scene load_steps=5 format=2]

[ext_resource path="res://sprites/puzzles/node.png" type="Texture" id=1]
[ext_resource path="res://puzzle_elements/puzzle_node.gd" type="Script" id=2]
[ext_resource path="res://sprites/puzzles/path_node.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 4.0

[node name="PuzzleNode" type="StaticBody2D" groups=["PuzzleNode"]]
collision_layer = 64
collision_mask = 0
script = ExtResource( 2 )
Path = null

[node name="Sprite2d" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="PathMark" type="Sprite" parent="."]
visible = false
modulate = Color( 0, 0, 0, 1 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="RayCast" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 192

[node name="BlockadeCast" type="RayCast2D" parent="."]
cast_to = Vector2( 0, 0 )
collision_mask = 192
